# poke-calc

./: .gitignore  README.md  pyproject.toml
adapters/: csv_name_provider.py  local_json_repository.py  poke_api_repository.py
application/: search_service.py  speed_service.py  survival_service.py
data/: pokemon_data.json  pokemon_names.csv
docs/plans/: 2026-04-19-pokemon-champions.md  2026-04-22-i18n.md
docs/specs/: 2026-04-19-git-conventions-design.md  2026-04-19-pokemon-champions-design.md  2026-04-22-i18n-design.md
docs/superpowers/plans/: 2026-04-23-ux-improvements.md  2026-04-27-ux-improvements-v2.md  2026-04-28-v3-speed-modifier-and-radar.md
docs/superpowers/specs/: 2026-04-22-ux-improvements-design.md  2026-04-27-ux-improvements-v2-design.md
domain/models/: move.py  nature.py  pokemon.py  stats.py
interfaces/streamlit/: app.py
interfaces/streamlit/components/: nature_selector.py  pokemon_selector.py  stat_radar.py  type_badge.py
scripts/: build_csv.py  build_data.py
shared/: config.py  type_chart.py
shared/i18n/: en.json  ja.json  translator.py  zh.json
tests/adapters/: test_csv_name_provider.py  test_local_json_repository.py
tests/adapters/fixtures/: test_names.csv  test_pokemon_data.json
tests/application/: test_calculator.py  test_search_service.py  test_speed_service.py  test_survival_service.py
tests/domain/: test_nature.py  test_stats.py
tests/shared/: test_lang_detection.py  test_translator.py  test_type_chart.py
