[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "poke-calc"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.35",
    "requests>=2.31",
    "plotly>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
